--- a/style.css
+++ b/style.css
@@ -165,6 +165,11 @@ header{position:relative;display: block;background-color: #933546;color:#fff;hei
 .bannerslider .owl-item{position: relative;display: block}
 .bannerslider img{width: 100%;height: auto;}
 
+.slidertxtovelay{position: absolute;top: 100px;height: 250px;background-color:rgba(30,24,25,0.8);right: 50px; width: 60%;padding: 20px;text-align: center;}
+.slideinner{position: relative;top:50%;transform: translateY(-50%);}
+.sltxt{position: relative;color: #fff;font-size:40px;line-height:50px;margin-bottom: 15px;}
+.sltxttwo{position: relative;color: #e6e6e6;font-size: 15px;line-height: 21px;}
+.slideinner .readmore{color: #fff;font-weight: 600;margin-top:15px;}
 
 .section-heading{position: relative;text-align: center;}
 .section-heading h2{font-size: 20px;line-height: 26px;color:#333;font-weight:700;text-align: center;overflow: hidden;display: inline-block;text-transform: uppercase;}
@@ -192,7 +197,7 @@ header{position:relative;display: block;background-color: #933546;color:#fff;hei
       transform: rotateX(360deg);}
 
 .service-wrap:hover {background-color: #f6f6f6;}
-.readmore{color:#933546;font-size: 15px;font-weight: 600;}
+.readmore{color:#933546;font-size: 15px;font-weight: 600;position: relative;display: inline-block;}
 .readmore:hover{color: #933546;text-decoration: underline;}
 
 
